# ws_caric_single

src/caric_mission/: CMakeLists.txt  README.md  package.xml
src/caric_mission/demo_paths/: demo_path_changi.yaml  demo_path_jurong.yaml  demo_path_nanyang.yaml  demo_path_raffles.yaml  demo_path_sentosa.yaml
src/caric_mission/launch/: demo_paths.launch  demo_paths_jurong.launch  demo_paths_raffles.launch  run_crane.launch  run_hangar.launch  run_mbs.launch  run_mbs_jurong.launch  run_mbs_raffles.launch  spawn_gcs.launch  spawn_uav.launch
src/caric_mission/models/crane/: construction_crane_1.stl  construction_crane_2.stl  crane_interest_points.pcd  crane_interest_points_dense.pcd
src/caric_mission/models/crane/bounding_boxes/: box1.stl  box10.stl  box11.stl  box12.stl  box13.stl  box14.stl  box15.stl  box2.stl  box3.stl  box4.stl  box5.stl  box6.stl  box7.stl  box8.stl  box9.stl  box_description.yaml
src/caric_mission/models/hangar/: hangar_interest_points.pcd
src/caric_mission/models/hangar/bounding_boxes/: box1.stl  box2.stl  box3.stl  box4.stl  box_description.yaml
src/caric_mission/models/mbs/: mbs.stl  mbs_interest_points.pcd  mbs_interest_points_dense.pcd
src/caric_mission/models/mbs/bounding_boxes/: box1.stl  box2.stl  box3.stl  box4.stl  box_description.yaml
src/caric_mission/rviz/: caric_crane.rviz  caric_hangar.rviz  caric_mbs.rviz  rviz.rviz
src/caric_mission/scripts/: generate_bounding_box.ipynb  launch_demo_paths.sh  launch_demo_paths_jurong.sh  launch_demo_paths_raffles.sh  mesh_visualizer.py  ppcom_changi_talker.py  ppcom_jurong_talker.py  ppcom_nanyang_talker.py  ppcom_raffles_talker.py  ppcom_router.py  ppcom_sentosa_talker.py  update_caric.sh
src/caric_mission/src/: MissionManager.cpp
src/caric_mission/worlds/: crane.world  hangar.world  mbs.world
src/octomap_gen/: CMakeLists.txt  package.xml
src/octomap_gen/src/: octomap_gen.cpp
src/rotors_simulator/: caric.rosinstall
src/rotors_simulator/mav_lowlevel_attitude_controller/: CMakeLists.txt
src/rotors_simulator/mav_lowlevel_attitude_controller/cfg/: PIDAttitude.cfg
src/rotors_simulator/mav_lowlevel_attitude_controller/resources/: PID_attitude_explorer.yaml  PID_attitude_firefly.yaml  PID_attitude_photographer.yaml
src/rotors_simulator/mav_lowlevel_attitude_controller/src/: PID_attitude_controller_node.cc
src/rotors_simulator/rotors_comm/: CMakeLists.txt
src/rotors_simulator/rotors_comm/msg/: BoolStamped.msg  PPComTopology.msg
src/rotors_simulator/rotors_description/meshes/: firefly_explorer.dae  firefly_explorer_0.stl  firefly_explorer_1.stl  firefly_explorer_2.stl  firefly_photographer_0.stl  firefly_photographer_1.stl  firefly_photographer_2.stl  gcs.stl  propeller_ccw.stl  propeller_cw.stl
src/rotors_simulator/rotors_description/meshes/gcs/: gcs.dae
src/rotors_simulator/rotors_description/ppcom_network/: caric_ppcom_network.txt  caric_ppcom_network_crane.txt  caric_ppcom_network_hangar.txt  caric_ppcom_network_mbs.txt
src/rotors_simulator/rotors_description/urdf/: caric_explorer.xacro  caric_explorer_base.xacro  caric_firefly_base.xacro  caric_photographer.xacro  caric_photographer_base.xacro  component_snippets.xacro  firefly1_base.xacro  firefly2_base.xacro  firefly3_base.xacro  gcs.xacro  gcs_base.xacro  hummingbird1_base.xacro  hummingbird2_base.xacro  hummingbird3_base.xacro  servo.xacro
src/rotors_simulator/rotors_gazebo/: CMakeLists.txt
src/rotors_simulator/rotors_gazebo/launch/: spawn_mav.launch
src/rotors_simulator/rotors_gazebo/worlds/: caric_building.world  city11_tiltedbuilding.world  city12_tiltedbuildings.world
src/rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
src/rotors_simulator/rotors_gazebo_plugins/src/: gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_octomap_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_ppcom_plugin.cpp  gazebo_servo_model.cpp
src/rotors_simulator/rotors_hil_interface/: CMakeLists.txt
src/rotors_simulator/rotors_joy_interface/: CMakeLists.txt
src/rotors_simulator/rotors_joy_interface/include/rotors_joy_interface/: joy_position.h  utility.h
src/rotors_simulator/rotors_joy_interface/scripts/: key_joystick.py
src/rotors_simulator/rotors_joy_interface/src/: joy_position.cpp
src/traj_gennav/: CMakeLists.txt  package.xml
src/traj_gennav/launch/: flightmare_multi.launch  flightmare_sim.launch  rotors_sim.launch
src/traj_gennav/rviz/: rviz.rviz
src/traj_gennav/src/: traj_gennav_node.cpp
src/unicon/: CMakeLists.txt  package.xml
src/unicon/cfg/: Param.cfg
src/unicon/include/unicon/: in_loop_cmd_generator.h
src/unicon/launch/: control.launch  rotors_multiple.launch  rotors_single.launch  spawn_gcs.launch  tcc.launch  test.world  unity.launch
src/unicon/param/: param_explorer.yaml  param_photographer.yaml
src/unicon/script/: launch_all.sh
src/unicon/src/: unicon_node.cpp
src/unicon/srv/: Stop.srv
src/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
src/velodyne_simulator/velodyne_gazebo_plugins/: CMakeLists.txt
(+6 files in other folders)
